# norepo

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  Dioxus.toml  Justfile  LICENSE  NOTICE  README.md  build.rs  deny.toml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
assets/: main.css  markdown.css  shell.css  tailwind.css  theme.css
crates/operon-agent-cli/: Cargo.toml
crates/operon-agent-cli/src/: main.rs
crates/operon-api-server/: Cargo.toml
crates/operon-api-server/src/: audit.rs  bootstrap.rs  error.rs  extractors.rs  lib.rs  main.rs  permissions.rs  state.rs
crates/operon-api-server/src/routes/: admin_invites.rs  admin_users.rs  auth.rs  departments.rs  export_import.rs  me.rs  memberships.rs  mod.rs  notes.rs  orgs.rs  projects.rs  session.rs  team_assignments.rs  teams.rs
crates/operon-api-server/tests/: auth_bootstrap.rs
crates/operon-auth/: Cargo.toml
crates/operon-auth/src/: error.rs  identity.rs  invite.rs  lib.rs  password.rs  rbac.rs  session.rs  tempassword.rs
crates/operon-auth/src/email/: log.rs  mod.rs  smtp.rs
crates/operon-auth/tests/: password_roundtrip.rs  token_unique.rs
crates/operon-bridge/: Cargo.toml
crates/operon-bridge/examples/: manual_smoke.rs
crates/operon-bridge/src/: lib.rs  protocol.rs  server.rs  stub.rs
crates/operon-bridge/tests/: end_to_end.rs
crates/operon-core/: Cargo.toml
crates/operon-core/migrations/sqlite/: 001_messages.sql
crates/operon-core/src/: agent_event.rs  budget.rs  config.rs  echo.rs  error.rs  lib.rs  mock.rs  permission.rs  persona.rs  registry.rs  runtime.rs  secrets.rs  session.rs  tracing_init.rs  traits.rs
crates/operon-core/src/memory/: in_memory.rs  mod.rs  sqlite.rs
crates/operon-export/: Cargo.toml
crates/operon-export/src/: error.rs  exporter.rs  importer.rs  lib.rs  manifest.rs
crates/operon-notes/: Cargo.toml
crates/operon-notes/src/: error.rs  frame.rs  hub.rs  lib.rs  projection.rs  session.rs
crates/operon-plugins-claude-code/: Cargo.toml
crates/operon-plugins-claude-code/src/: agent_backend.rs  event.rs  lib.rs  permission_bridge.rs  plugin.rs  stream.rs
crates/operon-plugins-claude-code/tests/: live_claude.rs
crates/operon-plugins-google/: Cargo.toml
crates/operon-plugins-google/src/: google.rs  lib.rs  sse.rs
crates/operon-plugins-lsp/: Cargo.toml
crates/operon-plugins-lsp/src/: client.rs  codec.rs  lib.rs  tool.rs
crates/operon-plugins-mcp/: Cargo.toml
crates/operon-plugins-mcp/src/: grant.rs  lib.rs  proxy.rs  stdio.rs
crates/operon-plugins-openai/: Cargo.toml
crates/operon-plugins-openai/src/: lib.rs  openai.rs  sse.rs
crates/operon-plugins-tools/: Cargo.toml
crates/operon-plugins-tools/src/: apply_patch.rs  edit.rs  git.rs  glob.rs  grep.rs  lib.rs  read.rs  registry.rs  repo_overview.rs  runtime_backend.rs  shell.rs  snapshot.rs  task.rs  todo.rs  web_fetch.rs  web_search.rs  write.rs
crates/operon-store/: Cargo.toml
crates/operon-store/migrations/: 001_initial.sql  002_users_password_flags.sql  003_audit_log.sql  004_note_updates.sql  005_local_mode.sql  006_local_projects.sql  007_local_notes.sql  008_local_note_kind.sql  009_local_note_blob_path.sql  010_local_note_link.sql  011_local_note_kind_extend.sql  012_local_project_repo_path.sql  013_chat_sessions.sql  014_chat_messages.sql  015_local_note_kind_skill_workflow.sql  016_local_note_kind_artifact.sql  017_chat_session_model_and_permission.sql  018_local_note_slug.sql  019_local_project_claude_defaults.sql  020_local_note_kind_phase.sql  021_local_note_kind_ce.sql  023_local_attachments.sql
crates/operon-store/src/: error.rs  ids.rs  lib.rs  migrations.rs  sqlite.rs  test_support.rs  time.rs  vfs.rs
crates/operon-store/src/repos/: attachment.rs  audit.rs  chat_message.rs  chat_session.rs  department.rs  invite.rs  local_attachment.rs  local_note.rs  local_note_link.rs  local_project.rs  local_search.rs  local_settings.rs  local_tree_state.rs  local_user.rs  membership.rs  mod.rs  note.rs  note_update.rs  org.rs  project.rs  session.rs  team.rs  team_member.rs  team_project.rs  user.rs
crates/operon-store/src/util/: slug.rs
crates/operon-store/src/wasm/: mod.rs  sql.rs  store.rs
crates/operon-store/tests/: local_mode_migrations.rs  local_note_persistence.rs  local_project_persistence.rs  local_search_integration.rs  migration_round_trip.rs  repos_smoke.rs
docs/: companion-claude-integration.md  sdlc-pipeline.md
instructions/: README.md  api-reference.md  architecture.md  build-guide.md  changelog.md  cicd-release-guide.md  coding-guidelines.md  coverage-report.md  database-schema.md  deployment-guide.md  development-guide.md  docs-maintenance-guide.md  environment-variables.md  folder-structure.md  future-improvements.md  how-it-works.md  index.md  performance-optimization.md  requirements.md  security-guidelines.md  setup-guide.md  setup-linux.md  setup-macos.md  setup-windows.md  tech-stack.md  testing-guide.md  troubleshooting.md
memory-game/: architecture-memory-match.md  master-requirement.md  requirements-01-core-matching-gameplay.md
scripts/: build-release.sh  sync-chromedriver.sh
seed-skills-employee/: 01-ba-discover-epics.md  01b-pm-prioritize-epics.md  02-ba-decompose-features.md  02b-pm-prioritize-features.md  03-ba-decompose-stories.md  03b-pm-prioritize-stories.md  04-ba-decompose-tasks.md  04b-pm-prioritize-tasks-coarse.md  05-sa-design-feature-hld.md  06b-pm-prioritize-tasks-refined.md  07-sde-implement-task.md  08-tst-write-tests.md  09-tst-run-tests.md  README.md
seed-skills-sum/: 01-ba-discover-epics.md  02-ba-decompose-features.md  03-ba-decompose-stories.md  04-ba-decompose-tasks.md  06-sa-design-story-lld.md  10-sum-summarize-task.md  README.md
seed-skills-updated-memory/: 00-coherence-check.md  02-ba-discover-epics.md  03-ba-decompose-features.md  03n-ba-normalize-features.md  04-ba-decompose-stories.md  05-ba-decompose-tasks.md  README.md  (+5 more)
tests-wasm/: Cargo.toml
tests-wasm/src/: lib.rs
tests-wasm/tests/: dom_helpers.rs  explorer_history.rs  inline_rename.rs  monaco_smoke.rs  smoke.rs
(+345 files in other folders)
