[workspace]
members = [".", "tests-wasm", "crates/operon-core", "crates/operon-plugins-anthropic", "crates/operon-plugins-mcp", "crates/operon-store", "crates/operon-auth", "crates/operon-api-server", "crates/operon-notes", "crates/operon-export"]
default-members = ["."]

[package]
name = "operon-dioxus"
version = "0.1.0"
authors = ["jehuamanna <jehuamanna@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
# `futures-timer` powers SaveScheduler's debounce. The `wasm-bindgen` feature is required for
# the wasm32 target to use `setTimeout`-based futures (gloo-timers under the hood); without it
# `Delay` panics with "no executor present" in the browser.
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
pulldown-cmark = { version = "0.10", default-features = false }
# `std::time::SystemTime::now()` panics with "time not implemented on this platform"
# under `wasm32-unknown-unknown`. `web-time` is a drop-in replacement that uses
# `js_sys::Date::now()` on wasm and `std::time` everywhere else.
web-time = "1"

# === Agent runtime crates (Plans-Phase-4 split) ===
operon-core = { path = "crates/operon-core" }
operon-plugins-anthropic = { path = "crates/operon-plugins-anthropic" }
operon-plugins-mcp = { path = "crates/operon-plugins-mcp" }

# === Agent-runtime support deps (re-exported / used by integration tests) ===
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Plans-Phase-4-multiselect-aria: regex preview in the bulk rename modal.
regex = "1"

# `web_sys` bindings used only on the wasm web build for localStorage + prefers-color-scheme.
# Native tests stub these out so the dependency is wasm-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "DomException",
    "Element",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "HtmlElement",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "StorageManager",
    "Window",
] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
# Plans-Phase-1: Local Mode wires the SQLite-backed local_user / local_app_settings
# repos into the desktop app. rusqlite is bundled and gated on non-wasm targets.
operon-store = { path = "crates/operon-store" }
# Vault directory picker (seed `Notes`, Plans-Phase-1-vault-dir). Desktop-only;
# web uses `Window::show_directory_picker()` via web-sys.
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
# Plans-Phase-6-image-notes: SHA-256 content addressing for image blobs.
sha2 = "0.10"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
sqlite-memory = ["operon-core/sqlite-memory"]

[dev-dependencies]
pretty_assertions = "1.4"
