[workspace]
members = [".", "tests-wasm", "crates/operon-core", "crates/operon-plugins-anthropic", "crates/operon-plugins-claude-code", "crates/operon-plugins-mcp", "crates/operon-store", "crates/operon-auth", "crates/operon-api-server", "crates/operon-notes", "crates/operon-export"]
default-members = ["."]

[package]
name = "operon-dioxus"
version = "0.1.0"
authors = ["jehuamanna <jehuamanna@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
# `futures-timer` powers SaveScheduler's debounce. The `wasm-bindgen` feature is required for
# the wasm32 target to use `setTimeout`-based futures (gloo-timers under the hood); without it
# `Delay` panics with "no executor present" in the browser.
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
pulldown-cmark = { version = "0.10", default-features = false }
# `std::time::SystemTime::now()` panics with "time not implemented on this platform"
# under `wasm32-unknown-unknown`. `web-time` is a drop-in replacement that uses
# `js_sys::Date::now()` on wasm and `std::time` everywhere else.
web-time = "1"

# === Agent runtime crates (Plans-Phase-4 split) ===
operon-core = { path = "crates/operon-core" }
operon-plugins-anthropic = { path = "crates/operon-plugins-anthropic" }
operon-plugins-mcp = { path = "crates/operon-plugins-mcp" }
# M1-companion-claude-code: ChatPlugin that drives the `claude` CLI as a
# subprocess so the companion pane runs real Claude Code against the
# active project's bound repository (cwd = LocalProject.repo_path).
operon-plugins-claude-code = { path = "crates/operon-plugins-claude-code" }

# === Agent-runtime support deps (re-exported / used by integration tests) ===
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Plans-Phase-4-multiselect-aria: regex preview in the bulk rename modal.
regex = "1"

# `web_sys` bindings used only on the wasm web build for localStorage + prefers-color-scheme.
# Native tests stub these out so the dependency is wasm-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Document",
    "DomException",
    "DomStringList",
    "Element",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemReadWriteOptions",
    "FileSystemRemoveOptions",
    "FileSystemSyncAccessHandle",
    "FileSystemWritableFileStream",
    "HtmlElement",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "StorageManager",
    "Window",
] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
# Plans-Phase-2-saving / Option 2: operon-store on wasm exposes the
# `wasm-sqlite` shim + repos when the feature is on; otherwise it ships
# only ids / error / time helpers (no SQL) so this dep stays cheap.
operon-store = { path = "crates/operon-store" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }
# Plans-Phase-1: Local Mode wires the SQLite-backed local_user / local_app_settings
# repos into the desktop app. rusqlite is bundled and gated on non-wasm targets.
operon-store = { path = "crates/operon-store" }

# Vault directory picker (seed `Notes`, Plans-Phase-1-vault-dir). Desktop-only;
# web uses `Window::show_directory_picker()` via web-sys.
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
# Plans-Phase-6-image-notes: SHA-256 content addressing for image blobs.
sha2 = "0.10"
# Read images out of the OS clipboard for the image-note "paste" affordance.
# WebView clipboard.read() is gated by browser permissions on WebKitGTK/wry,
# so we bypass JS entirely and ask the OS directly.
arboard = "3"
# Encode arboard's RGBA pixel buffer into PNG bytes before attach_blob.
# Single-format `png` crate is much lighter than the full `image` umbrella.
png = "0.17"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
sqlite-memory = ["operon-core/sqlite-memory"]
# Plans-Phase-2-saving / Option 2: turn on the wasm SQLite back-end.
# Activates `operon-store/wasm-sqlite` (the rusqlite-compat shim over
# sqlite-wasm-rs) and the real `OpfsPersistence` for note bodies.
# Build prerequisite on the host: `clang` (sqlite-wasm-rs builds libsqlite3
# C source for wasm32). Combine with `--no-default-features --features
# web,wasm-sqlite --target wasm32-unknown-unknown`.
wasm-sqlite = ["operon-store/wasm-sqlite"]

[dev-dependencies]
pretty_assertions = "1.4"
