[workspace]
members = [
    ".",
    "tests-wasm",
    "crates/operon-core",
    "crates/operon-plugins-anthropic",
    "crates/operon-plugins-claude-code",
    "crates/operon-plugins-mcp",
    "crates/operon-bridge",
    "crates/operon-plugins-openai",
    "crates/operon-plugins-google",
    "crates/operon-plugins-tools",
    "crates/operon-plugins-lsp",
    "crates/operon-agent-cli",
    "crates/operon-store",
    "crates/operon-auth",
    "crates/operon-api-server",
    "crates/operon-notes",
    "crates/operon-export",
]
default-members = [".", "crates/operon-plugins-claude-code"]

[package]
name = "operon-dioxus"
version = "0.1.0"
authors = ["jehuamanna <jehuamanna@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
# `futures-timer` powers SaveScheduler's debounce. The `wasm-bindgen` feature is required for
# the wasm32 target to use `setTimeout`-based futures (gloo-timers under the hood); without it
# `Delay` panics with "no executor present" in the browser.
futures-timer = { version = "3.0.3", features = ["wasm-bindgen"] }
pulldown-cmark = { version = "0.10", default-features = false }
# `std::time::SystemTime::now()` panics with "time not implemented on this platform"
# under `wasm32-unknown-unknown`. `web-time` is a drop-in replacement that uses
# `js_sys::Date::now()` on wasm and `std::time` everywhere else.
web-time = "1"

# === Agent runtime crates (Plans-Phase-4 split) ===
operon-core = { path = "crates/operon-core" }
operon-plugins-anthropic = { path = "crates/operon-plugins-anthropic" }
operon-plugins-mcp = { path = "crates/operon-plugins-mcp" }
# M1-companion-claude-code: ChatPlugin that drives the `claude` CLI as a
# subprocess so the companion pane runs real Claude Code against the
# active project's bound repository (cwd = LocalProject.repo_path).
operon-plugins-claude-code = { path = "crates/operon-plugins-claude-code" }

# === Agent-runtime support deps (re-exported / used by integration tests) ===
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }

# Plans-Phase-4-multiselect-aria: regex preview in the bulk rename modal.
regex = "1"

# IDE-grade permission card diff preview: render upcoming Edit/Write
# changes as a unified diff before approval. Used by `permission_prompt`
# and the audit drawer.
similar = "2"

# `web_sys` bindings used only on the wasm web build for localStorage + prefers-color-scheme.
# Native tests stub these out so the dependency is wasm-only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "Document",
    "DomException",
    "DomStringList",
    "Element",
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemReadWriteOptions",
    "FileSystemRemoveOptions",
    "FileSystemSyncAccessHandle",
    "FileSystemWritableFileStream",
    "HtmlElement",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "MediaQueryList",
    "Navigator",
    "Storage",
    "StorageManager",
    "Window",
] }
uuid = { version = "1", features = ["v4", "v5", "serde", "js"] }
# Plans-Phase-2-saving / Option 2: operon-store on wasm exposes the
# `wasm-sqlite` shim + repos when the feature is on; otherwise it ships
# only ids / error / time helpers (no SQL) so this dep stays cheap.
operon-store = { path = "crates/operon-store" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = "6"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }

# Bridge: in-tree MCP server that lets Claude Code (PTY-hosted in the
# companion terminal, or stdio child in chat mode) call back into the
# GUI process. Unix-only — uses unix-domain sockets. On non-unix
# desktops the bridge degrades to "absent" and the toolbar feature
# falls back to the legacy in-process executor path.
[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
operon-bridge = { path = "crates/operon-bridge" }
# Plans-Phase-9-monaco-desktop (rev 15): embed the editor-bridge dist
# folder into the binary so `bridge://localhost/...` resolves in
# installed bundles (.deb / .AppImage / .app / .msi) — `dx bundle`
# doesn't copy arbitrary asset directories alongside the binary, and
# the previous CARGO_MANIFEST_DIR-relative resolver only worked from
# the build host. Single-binary deploy keeps the runtime path lookup
# OS-agnostic.
include_dir = "0.7"
# Plans-Phase-1: Local Mode wires the SQLite-backed local_user / local_app_settings
# repos into the desktop app. rusqlite is bundled and gated on non-wasm targets.
operon-store = { path = "crates/operon-store" }

# Vault directory picker (seed `Notes`, Plans-Phase-1-vault-dir). Desktop-only;
# web uses `Window::show_directory_picker()` via web-sys.
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
# Slice A14 cutover: built-in tool plugins for the in-process runtime backend.
# Provides read/write/edit/glob/grep/shell/git/web tools + the runtime adapter.
operon-plugins-tools = { path = "crates/operon-plugins-tools" }
# Slice A4b settings page: HTTP client used to verify API keys against
# each provider's models endpoint. Same TLS stack as the rest of the deps.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Plans-Phase-6-image-notes: SHA-256 content addressing for image blobs.
sha2 = "0.10"
# Read images out of the OS clipboard for the image-note "paste" affordance.
# WebView clipboard.read() is gated by browser permissions on WebKitGTK/wry,
# so we bypass JS entirely and ask the OS directly.
arboard = "3"
# Encode arboard's RGBA pixel buffer into PNG bytes before attach_blob.
# Single-format `png` crate is much lighter than the full `image` umbrella.
png = "0.17"
# Companion-pane terminal mode: spawn `claude` in a pty so the upstream
# CLI's TUI (alt-screen, cursor positioning, ANSI colors) renders
# correctly inside the webview via xterm.js. The `portable-pty` crate
# wraps the platform-specific PTY APIs (Unix forkpty, Windows ConPTY)
# behind a uniform interface — same dependency wezterm uses.
portable-pty = "0.8"
# Companion-pane terminal mode: PTY bytes ship over the dioxus
# `eval.send` JSON channel, which can't carry raw binary — base64 is
# the cheapest binary-safe envelope and is symmetric on the JS side
# via `atob` / `btoa`.
base64 = "0.22"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
sqlite-memory = ["operon-core/sqlite-memory"]
# Plans-Phase-2-saving / Option 2: turn on the wasm SQLite back-end.
# Activates `operon-store/wasm-sqlite` (the rusqlite-compat shim over
# sqlite-wasm-rs) and the real `OpfsPersistence` for note bodies.
# Build prerequisite on the host: `clang` (sqlite-wasm-rs builds libsqlite3
# C source for wasm32). Combine with `--no-default-features --features
# web,wasm-sqlite --target wasm32-unknown-unknown`.
wasm-sqlite = ["operon-store/wasm-sqlite"]

[dev-dependencies]
pretty_assertions = "1.4"
