[package]
name = "operon-tests-wasm"
version = "0.0.0"
edition = "2021"
publish = false
description = "Browser-DOM integration tests for operon-dioxus, run via wasm-pack test --headless --chrome"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Element", "HtmlElement", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
