[package]
name = "operon-tests-wasm"
version = "0.0.0"
edition = "2021"
publish = false
description = "Browser-DOM integration tests for operon-dioxus, run via wasm-pack test --headless --chrome"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "KeyboardEventInit",
    "MouseEvent",
    "MouseEventInit",
    "Node",
    "NodeList",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
