[package]
name = "operon-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
operon-store = { path = "../operon-store" }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "tokio1-rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
