[package]
name = "operon-core"
version = "0.1.0"
edition = "2021"
description = "UI-agnostic core for the Operon agent runtime: traits, error/budget/bus, ReAct loop, memory abstractions"

[dependencies]
async-trait = "0.1"
bitflags = "2"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
keyring = { version = "2", default-features = false, features = ["linux-secret-service-rt-tokio-crypto-rust"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
rusqlite_migration = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"
uuid = { version = "1", features = ["v4", "serde", "js"] }

[features]
default = []
sqlite-memory = ["dep:rusqlite", "dep:rusqlite_migration"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
