[package]
name = "operon-export"
version = "0.1.0"
edition = "2021"

[dependencies]
operon-store = { path = "../operon-store" }
operon-notes = { path = "../operon-notes" }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt", "macros", "fs"] }
loro = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
