[package]
name = "operon-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
operon-store = { path = "../operon-store" }
loro = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
