[package]
name = "operon-plugins-claude-code"
version = "0.1.0"
edition = "2021"
description = "Claude Code CLI ChatPlugin for Operon (subprocess + stream-json IO, session resume)"

[dependencies]
operon-core = { path = "../operon-core" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "process", "net", "fs"] }
tempfile = "3"

[[bin]]
name = "operon-mcp-permission"
path = "src/bin/operon_mcp_permission.rs"
required-features = []

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
uuid = { version = "1", features = ["v4"] }
