[package]
name = "operon-plugins-google"
version = "0.1.0"
edition = "2021"
description = "Google Gemini ChatPlugin (streaming + function_calling, long-context flag)"

[dependencies]
operon-core = { path = "../operon-core" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
