[package]
name = "operon-plugins-lsp"
version = "0.1.0"
edition = "2021"
description = "LSP client + ToolPlugin (drives rust-analyzer / pyright / typescript-language-server etc., exposes goto_definition / hover / find_references / document_symbols / diagnostics)"

[dependencies]
operon-core = { path = "../operon-core" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process"] }
bytes = "1"
lsp-types = "0.95"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
