[package]
name = "operon-plugins-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) client plugins for Operon"

[dependencies]
operon-core = { path = "../operon-core" }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
