[package]
name = "operon-store"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
web-time = "1"

# Desktop-only: bundled SQLite via rusqlite + r2d2 connection pool.
# Wasm uses the wasm-sqlite feature path below.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "blob", "uuid"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Plans-Phase-2-saving: opt-in wasm SQLite back-end. `cargo build` with
# `--features wasm-sqlite --target wasm32-unknown-unknown` activates the
# `sqlite-wasm-rs` FFI + the rusqlite-compat shim under
# `crates/operon-store/src/wasm/`. The feature is opt-in because
# `sqlite-wasm-rs`'s build.rs needs `clang` (with built-in WASM target)
# on the host — a v1 dev-environment requirement we don't impose on
# everyone yet.
[features]
default = []
wasm-sqlite = ["dep:sqlite-wasm-rs", "dep:sqlite-wasm-vfs"]

# Wasm-only optional deps. Activate only when --features wasm-sqlite is
# passed AND the target is wasm32. Desktop builds never see them.
[target.'cfg(target_arch = "wasm32")'.dependencies.sqlite-wasm-rs]
version = "0.5"
optional = true

# `sqlite-wasm-vfs` ships the opfs-sahpool VFS we register before
# Store::open. No native build script; no clang required for *this*
# dep (clang is still needed for sqlite-wasm-rs).
[target.'cfg(target_arch = "wasm32")'.dependencies.sqlite-wasm-vfs]
version = "0.2"
optional = true

[dev-dependencies]
tempfile = "3"
